--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="navig">
           <a
@@ -54,14 +54,14 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="section-oen section">
         <div class="container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="butt">Order Service</button>
         </div>
-      </section>
+      </section> 
 
       <section class="section-two">
         <div class="container">
@@ -126,6 +126,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- ===========Section 3 ==============------------------------------ -->
 
       <section class="section-three-team">
         <div class="container">
@@ -434,6 +436,7 @@
         </div>
       </section>
     </main>
+    
     <footer class="foot">
       <div class="container footer-container">
         <div class="logo-block">
@@ -478,11 +481,11 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> 
 
         <!----------Modal--------->
 
-        <div class="subscribe-form">
+         <div class="subscribe-form">
           <p class="footer-parag">Subscribe</p>
           <form class="footer-form" name="footer-form">
             <label for="footer-email" class="footer-email">
@@ -502,12 +505,13 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> 
 
     <!----------Modal--------->
 
-    <div class="backdrop is-open">
-      <div class="modal">
+    <div class="backdrop">
+      <!-- <div class="backdrop is-open"> -->
+      <!-- <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-btn-clouse" width="8" height="8">
             <use href="./images/modalicons.svg#icon-modalbtn"></use>
@@ -594,7 +598,7 @@
           
           <button class="modal-but" type="submit">Send</button>
         </form>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
