--- a/index.html
+++ b/index.html
@@ -591,6 +591,9 @@
       </section>
     </main>
     
+
+    <!------------footer------------------------------------------->
+
     <footer class="foot">
       <div class="container footer-container">
         <div class="logo-block">
