--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <title>Web-Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="body">
     <header class="header">
@@ -133,6 +134,8 @@
       </div>
       </div>
     </header>
+
+    
     <main>
       <section class="section-oen section">
         <div class="container">
